--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "element-ui": "^2.4.2",
+    "express": "^4.16.4",
+    "pm2": "^3.2.7",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "socket.io-client": "^2.2.0",
